--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "sirv-cli": "1.0.3"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "prop-types": "^15.7.2"
   },
   "jest": {
     "preset": "jest-preset-preact",
