--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "eslint-config-preact": "^1.1.0",
     "jest": "^24.9.0",
     "jest-preset-preact": "^1.0.0",
+    "node-sass": "^4.14.1",
     "preact-cli": "^3.0.0",
+    "sass-loader": "^10.0.3",
     "sirv-cli": "1.0.3"
   },
   "dependencies": {
